--- a/package.json
+++ b/package.json
@@ -1,27 +1,41 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
-  "name": "hello-express",
-  "version": "0.0.1",
-  "description": "A simple Node app built on Express, instantly up and running.",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "express": "^4.17.1"
-  },
-  "engines": {
-    "node": "12.x"
-  },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/hello-express"
-  },
-  "license": "MIT",
-  "keywords": [
-    "node",
-    "glitch",
-    "express"
-  ]
+	"//1": "describes your app and its dependencies",
+	"//2": "https://docs.npmjs.com/files/package.json",
+	"//3": "updating this file will download and update your packages",
+	"name": "FCC-Advanced-Node-and-Express",
+	"author": "http://github.com/JosephLivengood",
+	"version": "0.0.1",
+	"description": "What am I about?",
+	"main": "server.js",
+	"scripts": {
+		"start": "node server.js"
+	},
+	"dependencies": {
+		"body-parser": "^1.16.0",
+		"cors": "^2.8.1",
+		"express": "^4.14.1",
+		"express-session": "^1.15.0",
+		"helmet": "^3.4.0",
+		"mongodb": "^2.2.36",
+		"passport": "^0.3.2",
+		"passport-github": "^1.1.0",
+		"passport-google": "^0.3.0",
+		"passport-google-oauth2": "^0.2.0",
+		"passport-local": "^1.0.0",
+		"passport-oauth": "^1.0.0",
+		"pug": "^0.1.0"
+	},
+	"engines": {
+		"node": "4.4.3"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://hyperdev.com/#!/project/welcome-project"
+	},
+	"keywords": [
+		"node",
+		"hyperdev",
+		"express"
+	],
+	"license": "MIT"
 }
